# Synta

./: .env.example  .gitignore  Dockerfile  README.md  VERCEL.md  app.py  docker-compose.yml  pyproject.toml  vercel.json
scripts/: check-db.ps1  migrate.ps1  start-worker.ps1  start.ps1  stop.ps1
syntra/: main.py  worker.py
syntra/agents/: base.py  implementation.py  intake.py  planning.py  pull_request.py  repository_agent.py  validation_agent.py  workflow.py
syntra/api/: projects.py
syntra/core/: config.py  logging.py
syntra/db/: base.py  migrate.py  models.py
syntra/schemas/: bugs.py  projects.py
syntra/services/: audit.py  auth.py  billing.py  bugs.py  git_service.py  github_service.py  integrations.py  invitations.py  job_runner.py  jobs.py  llm.py  projects.py  repository.py  secrets.py  slack.py  validation.py
syntra/web/: routes.py
syntra/web/static/: app.css
syntra/web/templates/: accept_invitation.html  approvals.html  base.html  billing.html  bugs.html  dashboard.html  forgot_password.html  github.html  landing.html  new_bug.html  projects.html  reset_password.html  sign_in.html  sign_up.html  slack.html  team.html
tests/: conftest.py  test_git_service.py  test_intake.py  test_repository.py  test_validation.py  test_workspace_isolation.py
