[project]
name = "syntra"
version = "0.1.0"
description = "MVP autonomous bug-fix workflow from Slack to GitHub PR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "slack-bolt>=1.20.0",
    "pygithub>=2.4.0",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "cryptography>=42.0.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
app = "syntra.main:app"
syntra = "syntra.main:run"
syntra-worker = "syntra.worker:run_worker"
syntra-migrate = "syntra.db.migrate:run_migrations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
